5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1593_1806.log
== TEST (2019-03-28 10:56:09) 
-- CODE:
x = float(input("insira o numero de pessoas:"))
from math import factorial(x)
x1 =  365 factorial(x)/(365 - factorial(x))
x2 = 1/365**x
x3 = 1 - x1 * x2
print(x3)
-- ERROR:
File "XXXX", line 2
    from math import factorial(x)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:56:46) 
-- CODE:
x = float(input("insira o numero de pessoas:"))
from math
x1 =  365 factorial(x)/(365 - factorial(x))
x2 = 1/365**x
x3 = 1 - x1 * x2
print(x3)
-- ERROR:
File "XXXX", line 2
    from math
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:57:26) 
-- CODE:
x = float(input("insira o numero de pessoas:"))
from math import *
x1 =  365 factorial(x)/(365 - factorial(x))
x2 = 1/365**x
x3 = 1 - x1 * x2
print(x3)
-- ERROR:
File "XXXX", line 3
    x1 =  365 factorial(x)/(365 - factorial(x))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:58:46) 
-- CODE:
x = float(input("insira o numero de pessoas:"))
from math import *
x1 =  factorial(365)/factorial(365 - x)
x2 = 1/365**x
x3 = 1 - x1 * x2
print(x3)
-- OUTPUT:
0.16702478883806438
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:59:28) 
-- CODE:
x = float(input("insira o numero de pessoas:"))
from math import *
x1 =  factorial(365)/factorial(365 - x)
x2 = 1/365**x
x3 = 1 - x1 * x2
print(round(x3,2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:00:41) 
-- CODE:
x = float(input("insira o numero de pessoas:"))
from math import *
x1 =  factorial(365)/factorial(365 - x)
x2 = 1/365**x
x3 = 1 - x1 * x2
print(round(x3,2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:03:08) 
-- CODE:
x = float(input("insira o numero de pessoas:"))
from math import *
P = 1 - (factorial(365)/factorial(365 - x)) * (1/365**x)
print(round(P,2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:04:08) 
-- CODE:
x = float(input("insira o numero de pessoas:"))
from math import *
P = 1 - (factorial(365)/factorial(365 - x)) * (1/365 ** x)
print(round(P,2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:04:32) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *
P = 1 - (factorial(365)/factorial(365 - n)) * (1/365 ** n)
print(round(P,2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:05:23) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *
P = 1 - (factorial(365)/factorial(365 - n)) * (1 /(365 ** n))
print(round(P,2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:05:36) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *
P = 1 - (factorial(365)/factorial(365 - n)) * (1 /(365 ** n))
print(round(P,2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:07:15) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *
P = 1 - (factorial(365)/factorial(365 - n)) * (1 /(365 ** n))
prob = 100 * P
print(round(prob,2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:07:24) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *
P = 1 - (factorial(365)/factorial(365 - n)) * (1 /(365 ** n))
prob = 100 * P
print(round(prob,2))
-- EXECUTION TIME:
0.160206
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:20:01) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *
P = 1 -((factorial(365)/factorial(365 - n) * 1/365**n)
prob = P * 100
print(round(Prob,2))
-- ERROR:
File "XXXX", line 4
    prob = P * 100
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:20:44) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *
P = 1 -((factorial(365)/factorial(365 - n) * 1/365**n)
prob = P * 100
print(round(P,2))
-- ERROR:
File "XXXX", line 4
    prob = P * 100
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:21:28) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *
P = 1 -((factorial(365)/factorial(365 - n) * 1/365**n)

print(round(P,2))
-- ERROR:
File "XXXX", line 5
    print(round(P,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:21:41) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *
P = 1 -((factorial(365)/factorial(365 - n) * 1/365**n)

print(round(P, 2))
-- ERROR:
File "XXXX", line 5
    print(round(P, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:22:01) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *
P = 1 -((factorial(365)/factorial(365 - n) * 1/365**n)


-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:22:29) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *
P = 1 -((factorial(365)/factorial(365 - n) * (1/365**n))


-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:23:23) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *
P = 1 -((factorial(365)/factorial(365 - n) * (1/365**n))
print(P)


-- ERROR:
File "XXXX", line 4
    print(P)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:24:04) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *


-- ERROR:
File "XXXX", line 4
    print(P)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:26:04) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *
P = 1 - (factorial(365)/factorial(365 - n) - (1/365**n))

print(P)


-- OUTPUT:
-4.65743122743311e+30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:26:47) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *
P = 1 - (factorial(365)/factorial(365 - n) - (1/365**n))
prob = 100 *P

print(prob)


-- OUTPUT:
-4.65743122743311e+32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:27:27) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *
P = 1 - (factorial(365)/factorial(365 - n) - (1/365**n))
prob = 100 *P

print(round(prob, 2))


-- OUTPUT:
-4.65743122743311e+32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 20:27:42) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *
P = 1 - (factorial(365)/factorial(365 - n) - (1/365**n))
prob = 100 *P

print(round(prob, 2))


-- EXECUTION TIME:
0.141986
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
-4.65743122743311e+32
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
-1.4432680201315587e+63
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
-1.9583719727497317e+249
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:27:45) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *
P = 1 - (factorial(365)/factorial(365 - n) - (1/365**n))
prob = 100 *P

print(round(prob, 2))


-- OUTPUT:
-4.65743122743311e+32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:28:00) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *
P = 1 - (factorial(365)/factorial(365 - n) * (1/365**n))
prob = 100 *P

print(round(prob, 2))


-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 20:28:08) 
-- CODE:
n = float(input("insira o numero de pessoas:"))
from math import *
P = 1 - (factorial(365)/factorial(365 - n) * (1/365**n))
prob = 100 *P

print(round(prob, 2))


-- EXECUTION TIME:
0.148916
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
